# foundry-workshop-demo

./: .gitignore  AGENTS.md  PULL_REQUEST.md  README.md  SECURITY.md  apply.sh  branch-protection.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/agents/: pipeline-engineer.agent.md  release-manager.agent.md  security-reviewer.agent.md  test-specialist.agent.md
.github/instructions/: workflows.instructions.md
.github/scripts/: agent_review.py
.github/workflows/: agent-review.yml  ci.yml  codeql.yml  dependency-review.yml  pages.yml
app/: __init__.py  sentiment.py
docs/: agentic-devops-setup.md
tests/: test_sentiment.py
web/: app.js  index.html  style.css
