[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry-workshop-demo"
version = "0.1.0"
description = "Minimal app shipped by the agentic DevOps pipeline demo."
requires-python = ">=3.11"
dependencies = ["requests>=2.32.0"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
# Make the repo root importable so `from app.sentiment import analyze` works.
pythonpath = ["."]
testpaths = ["tests"]
